# bioinformatics

./: LICENSE  README.md
compbio_ml_projects/drug_target_bioactivity/: .dockerignore  .gitattributes  Dockerfile  README.md  bioactivity_pred.ipynb  main.py  pyproject.toml
compbio_ml_projects/drug_target_bioactivity/data/: EC50_bind.tsv  IC50_bind.tsv  Kd_bind.tsv  Ki_bind.tsv  X_features.npy  processed_dtabioactivty_data.parquet  y_labels.npy
compbio_ml_projects/drug_target_bioactivity/dta-demo-ui/: dta_app.py
compbio_ml_projects/drug_target_bioactivity/dta-demo-ui/app/: __init__.py  routes.py
compbio_ml_projects/drug_target_bioactivity/dta-demo-ui/app/templates/: index.html
compbio_ml_projects/drug_target_bioactivity/models/: bioactivity_prediction_rf_model.joblib  bioactivity_prediction_xgb_model.json
compbio_ml_projects/drug_target_bioactivity/notebooks/: bioactivity-pred-final.ipynb  bioactivity_pred.ipynb
compbio_ml_projects/drug_target_bioactivity/scripts/: predict.py  preprocessing.py  train.py
compbio_ml_projects/pathogen_classifier/: README.md  main.py  pyproject.toml
compbio_ml_projects/pathogen_classifier/config/: config.yaml
compbio_ml_projects/pathogen_classifier/data/raw/Coronaviridae/: NC_009021.fasta  NC_016996.fasta  NC_048212.fasta  NC_048213.fasta  NC_055953.fasta  NC_076629.fasta  NC_076685.fasta
compbio_ml_projects/pathogen_classifier/data/raw/Filoviridae/: NC_004161.fasta  NC_014372.fasta  NC_024781.fasta  NC_055175.fasta  NC_055176.fasta  NC_076535.fasta  NC_076735.fasta
compbio_ml_projects/pathogen_classifier/data/raw/Flaviviridae/: NC_001564.fasta  NC_001672.fasta  NC_001809.fasta  NC_003635.fasta  NC_003675.fasta  NC_003687.fasta  NC_003996.fasta  NC_004119.fasta  NC_005039.fasta  NC_005062.fasta  NC_007580.fasta  NC_008719.fasta  NC_009026.fasta  NC_009028.fasta  NC_012533.fasta  NC_012534.fasta  NC_012671.fasta  NC_012735.fasta  NC_012932.fasta  NC_016997.fasta  NC_023424.fasta  NC_024017.fasta  NC_024299.fasta  NC_024805.fasta  NC_024806.fasta  NC_027819.fasta  NC_028137.fasta  NC_029054.fasta  NC_030401.fasta  NC_031327.fasta  NC_033694.fasta  NC_033697.fasta  NC_033699.fasta  NC_033715.fasta  NC_033721.fasta  NC_033724.fasta  NC_033726.fasta  NC_034007.fasta  NC_034018.fasta  NC_034151.fasta  (+13 more)
compbio_ml_projects/pathogen_classifier/data/raw/Orthomyxoviridae/: NC_002204.fasta  NC_002205.fasta  NC_004906.fasta  NC_004907.fasta  NC_004908.fasta  NC_004910.fasta  NC_004912.fasta  NC_006307.fasta  NC_006309.fasta  NC_006310.fasta  NC_006311.fasta  NC_006312.fasta  NC_007358.fasta  NC_007359.fasta  NC_007363.fasta  NC_007364.fasta  NC_026422.fasta  NC_026424.fasta  NC_026426.fasta  NC_026427.fasta  NC_026433.fasta  NC_026434.fasta  NC_036616.fasta  NC_078731.fasta
compbio_ml_projects/pathogen_classifier/data/raw/Retroviridae/: NC_001362.fasta  (+48 more)
compbio_ml_projects/pathogen_classifier/src/: config.py
compbio_ml_projects/pathogen_classifier/src/data_processing/: build_fragments.py  data_loader.py  download.py  fragment.py
compbio_ml_projects/pathogen_classifier/src/models/: classifier.py
compbio_ml_projects/pathogen_classifier/tests/: test_fragment.py
(+293 files in other folders)
