[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pathogen-classifier"
version = "0.1.0"
description = "ML-based viral genome classifier for Infectious diseases in Africa"
authors = [{name = "Joshua Ampofo Yentumi", email = "ampofojoshuayent@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"


dependencies = [
    # Core ML/Data Science Stack
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.5.0",
    "keras>=2.4.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    
    # Bioinformatics Packages
    "biopython>=1.79",
    "scikit-bio>=0.7.0",
    
    # Web Framework and API
    "flask>=2.0.0",
    "flask-cors>=3.0.10",
    "gunicorn>=20.1.0",

    # Utilities
    "pyyaml>=6.0",
    "requests>=2.25.1",
    "tqdm>=4.62.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.20.0",
]


[project.urls]
Homepage = "https://github.com/JoshAmpofo/bioinformatics/compbio_ml_projects/pathogen_classifier"
Repository = "https://github.com/JoshAmpofo/bioinformatics/compbio_ml_projects/pathogen_classifier"


[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]


[tool.hatch.build.targets.wheel]
packages = ["src/pathogen_classifier"]